Nav z-index fixed

--- a/components/Nav/Nav.module.css
+++ b/components/Nav/Nav.module.css
@@ -145,6 +145,7 @@
 
         transform: translateX(-100%);
         transition: all 0.5s ease-in-out;
+        z-index: 1;
     }
 
     .navOpen{
